chore: added first SSL tests