@@ -33,7 +33,8 @@
 
     <properties>
         <!-- PROPERTIES -->
-        <java-version>21</java-version>
+
+        <java-version>24</java-version>
         <project.encoding>UTF-8</project.encoding>
         <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
@@ -44,6 +45,7 @@
         <!-- TEST -->
         <junit.version>5.12.0</junit.version>
         <assertj-core.version>3.27.3</assertj-core.version>
+        <junit-launcher.version>1.12.0</junit-launcher.version>
 
         <!-- BUILD -->
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -54,7 +56,6 @@
         <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
         <central-publishing-maven-plugin.version>0.5.0</central-publishing-maven-plugin.version>
-        <junit-launcher.version>1.12.0</junit-launcher.version>
     </properties>
 
     <dependencies>
@@ -112,7 +113,9 @@
                     <threadCount>2</threadCount>
                     <useUnlimitedThreads>false</useUnlimitedThreads>
                     <!-- Flag to test exit code in NanoTest (https://stackoverflow.com/questions/76151072/error-during-sbt-launcher-java-lang-unsupportedoperationexception-the-security) -->
-                    <argLine>${argLine} -Djava.security.manager=allow</argLine>
+                    <argLine>${argLine} --add-exports java.base/sun.security.x509=ALL-UNNAMED --add-opens
+                        java.base/sun.security.x509=ALL-UNNAMED
+                    </argLine>
                     <!--                    <forkedProcessExitTimeoutInSeconds>240</forkedProcessExitTimeoutInSeconds>-->
                 </configuration>
             </plugin>
